Fix start menu visibility by removing display:flex override

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -226,7 +226,7 @@ html, body {
 
 /* Game Screen */
 #game-screen {
-    display: flex;
+    /* display: flex removed - handled by .screen.active */
     flex-direction: column;
 }
 
